<resources>
    <string name="app_name">校内任务平台</string>
    <string name="version">V1.0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="name">昵称or姓名</string>
    <string name="contact">Contact</string>
    <string name="some_thing">Something</string>

    <string name="release">我发布的</string>
    <string name="accept">我接受的</string>
    <string name="detail">详细资料</string>

    <string name="setting">个人设置</string>
    <string name="information">个人信息</string>
    <string name="more">更多</string>

    <string name="copyright">Copyright © 2017-2019</string>
    <string name="allRight">All Rights Reserved</string>
    <string name="versions">版本更新</string>
    <string name="function">功能与介绍</string>
    <string name="opinion">意见与反馈</string>

    <string name="newTask">发布任务</string>

    <string name="title">标题:</string>
    <string name="content">内容:</string>
    <string name="author">作者</string>
    <string name="time">年/月/日 时间</string>

    <string name="input">请输入标题(十个字之内)</string>
    <string name="input2">对发布任务具体描述···</string>

    <string name="share">分享</string>

    <string name="task">任务</string>

    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="address">所在地</string>
    <string name="college">学院</string>
    <string name="introduction">简介</string>
    <string name="qq">QQ</string>
    <string name="telephone">电话</string>
    <string name="profiles">简介</string>

    <string name="modifyInf">修改信息</string>
    <string name="title_activity_login">LoginActivity</string>
</resources>
