<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/release"
            android:icon="@drawable/release"
            android:title="@string/release" />

        <item
            android:id="@+id/accept"
            android:icon="@mipmap/acc"
            android:title="@string/accept" />

        <item android:title="@string/setting">
            <menu>
                <item
                    android:id="@+id/person"
                    android:icon="@drawable/person"
                    android:title="@string/information" />
                <item
                    android:id="@+id/more"
                    android:icon="@drawable/more"
                    android:title="@string/more" />
            </menu>
        </item>

    </group>

</menu>
