<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_more"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="15dp"
    android:paddingTop="60dp"
    android:background="@color/colorBackground"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/platform"
        android:id="@+id/imageView"
        android:layout_marginBottom="5dp"
        android:scaleType="center" />

    <TextView
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_name" />

    <TextView
        android:text="@string/version"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:id="@+id/version" />

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/colorView"/>

    <Button
        android:text="@string/versions"
        android:gravity="left|center"
        android:paddingLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/versions"
        android:background="@color/colorWhite" />

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/colorView"/>

    <Button
        android:text="@string/function"
        android:gravity="left|center"
        android:paddingLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/function"
        android:background="@color/colorWhite" />

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/colorView"/>

    <Button
        android:text="@string/opinion"
        android:gravity="left|center"
        android:paddingLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/opinion"
        android:background="@color/colorWhite" />

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/colorView"/>

    <TextView
        android:text="@string/copyright"
        android:gravity="bottom|center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/copy_right" />

    <TextView
        android:text="@string/allRight"
        android:gravity="bottom|center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/all_right" />

</LinearLayout>
