<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_person"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/colorView"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <others.ImageTextButton
            android:id="@+id/image_text_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </others.ImageTextButton>

    </LinearLayout>

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/colorView"/>

    <View
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:background="@color/colorView"/>

    <Button
        android:text="@string/release"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:paddingLeft="18dp"
        android:background="@color/colorWhite"
        android:id="@+id/myTask" />

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/colorView"/>

    <Button
        android:text="@string/accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:paddingLeft="18dp"
        android:background="@color/colorWhite"
        android:id="@+id/myaccept" />

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/colorView"/>

    <Button
        android:text="@string/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:paddingLeft="18dp"
        android:background="@color/colorWhite"
        android:id="@+id/details" />

</LinearLayout>
