<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_modify_inf"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/mod_touxiang"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:src="@drawable/touxiang"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="350dp">

            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/colorView"/>
            <TextView
                android:text="@string/sex"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"/>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/colorView"/>
            <TextView
                android:text="@string/age"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"/>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/colorView"/>
            <TextView
                android:text="@string/address"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"/>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/colorView"/>
            <TextView
                android:text="@string/college"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"/>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/colorView"/>
            <TextView
                android:text="@string/qq"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"/>

            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/colorView"/>

            <TextView
                android:text="@string/profiles"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"/>

            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/colorView"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/colorView"/>
            <EditText
                android:id="@+id/mod_sex"
                android:hint="@string/sex"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:textColor="#333333"
                android:paddingLeft="20dp"
                android:background="@null"/>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/colorView"/>
            <EditText
                android:id="@+id/mod_age"
                android:hint="@string/age"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:textColor="#333333"
                android:paddingLeft="20dp"
                android:background="@null"/>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/colorView"/>
            <EditText
                android:id="@+id/mod_address"
                android:hint="@string/address"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:textColor="#333333"
                android:paddingLeft="20dp"
                android:background="@null"/>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/colorView"/>
            <EditText
                android:id="@+id/mod_cademy"
                android:hint="@string/college"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:textColor="#333333"
                android:paddingLeft="20dp"
                android:background="@null"/>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/colorView"/>
            <EditText
                android:id="@+id/mod_qq"
                android:hint="@string/qq"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:textColor="#333333"
                android:paddingLeft="20dp"
                android:background="@null"/>

            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/colorView"/>

            <EditText
                android:id="@+id/mod_profiles"
                android:hint="@string/profiles"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:textColor="#333333"
                android:paddingLeft="20dp"
                android:background="@null"/>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="@color/colorView"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
