<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_task_content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <others.mImageButton
            android:id="@+id/mImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </others.mImageButton>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:text="@string/title"
                    android:textSize="18sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:id="@+id/content_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:text="作者"
                    android:layout_marginRight="5dp"
                    android:id="@+id/content_author"/>

            </LinearLayout>

            <TextView
                android:text="@string/time"
                android:textSize="12sp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/content_time" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:background="@color/colorView"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:text="@string/content"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content2" />

    </android.support.v4.widget.NestedScrollView>

    <View
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:background="@color/colorView"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:src="@mipmap/accept"
        app:backgroundTint="@color/colorAccent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/accepted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:src="@mipmap/not"
        app:backgroundTint="@color/colorAccent"/>

</LinearLayout>
